# work-tracker

./: .gitignore  LICENSE  README.md  context_scraper.py  install.sh  logger.py  pyproject.toml  report.py  reporter.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
devtrackr/: cli.py  config.py  logger.py  reporter.py
worktracker/: cli.py  config.py  scraper.py
